Revert "Revert "add get match endpoint""
This reverts commit e680d50ec2e5c9e58fc7fb6a9a710ce7edf75896.
